[package]
name = "core"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26.1"
merlin = "2"
# TODO: switch to https://github.com/stellar/slingshot after it bump versions
zkvm = { git = "https://github.com/p0lunin/slingshot/", package = "zkvm" }
merkle = { git = "https://github.com/p0lunin/slingshot/", package = "merkle" }
blockchain = { git = "https://github.com/p0lunin/slingshot/", package = "blockchain" }
