[package]
name = "tracker"
version = "0.1.0"
authors = ["p0lunin <dmytro.polunin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.26.1"
bitcoincore-rpc = "0.13.0"
serde = "1.0.126"
serde_json = "1.0.64"
